# Simple-Calculator

./: README.md  meson.build
src/: calculate.c  calculate.h  calculator-window.c  calculator-window.cmb  calculator-window.h  calculator-window.ui  calculator.gresource.xml  main.c  resources.c
